# lk-s-2026-miloje-slam

./: .gitignore  .gitmodules  README.md  desni_motor.py  komunikacija.py  lidar_dump.txt  runner.py
RPLidarA1Viz/: CombinedViz.py  ICPtest.py  lidar_viz.py
RPLidarA1Viz/LidarSim/: 1DataSimAndViz.py  2RobotMovement.py  4ScanMatcher.py  5InetractiveRobotMovementNoNoise.py  6NewerMatcher.py  README.md  built_map.csv  built_map_trajectory.csv  built_map_transforms.csv  lidar_scan_metadata.csv  robust_built_map.csv
RViz/: LidarPublisher.py
SLAM-Testing/: .gitignore  rebuild.sh  runner.sh
SLAM-Testing/RPLidarA1Viz/: lidar_viz.py
SLAM-Testing/src/lidar_pkg/: .path_planner_node.py.swp  package.xml  setup.py
SLAM-Testing/src/lidar_pkg/launch/: miloje_slam.launch.py
SLAM-Testing/src/lidar_pkg/lidar_pkg/: .komunikacija.py.swp  komunikacija.py  kretanje_koordinatni_sistem.py  lidar_scan_node.py  logger_node.py  path_planner_node.py  slam_mapping_node.py
SLAM-Testing/src/lidar_pkg/scripts/: lidar_scan_node.py  motion_planner_node.py  path_planner_node.py  slam_mapping_node.py  vector_deducer_node.py
git@github.com:pfe-rs/: my_scan_output.txt
git@github.com:pfe-rs/install/: local_setup.sh  setup.sh
git@github.com:pfe-rs/log/: latest_build
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lidar_test_data/: lidar_test_data_0.db3  metadata.yaml
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/lidar_pkg/: CMakeLists.txt
src/lidar_pkg/scripts/: motion_planner_node.py  path_planner_node.py  vector_deducer_node.py
(+239 files in other folders)
